Fix z-index issues

--- a/src/client/src/components/flow/flow.scss
+++ b/src/client/src/components/flow/flow.scss
@@ -124,6 +124,18 @@
   z-index: 1 !important;
 }
 
+.react-flow__edge-BlockEdgeType {
+  &:hover {
+    cursor: grab;
+  }
+
+  &.selected {
+    .react-flow__edge-path {
+      stroke: black !important;
+    }
+  }
+}
+
 // COMMON
 .react-flow__handle {
   position: absolute;
@@ -158,11 +170,6 @@
   height: 100%;
 }
 
-.react-flow__node {
-  opacity: 1 !important;
-  padding: 0px !important;
-}
-
 .react-flow__nodes {
   z-index: 3;
 }
@@ -172,11 +179,11 @@
 }
 
 .terminals-dropdown {
-  z-index: 6 !important;
+  z-index: 5 !important;
 }
 
 .react-flow__edges {
-  z-index: 4 !important;
+  z-index: 4;
 }
 
 .react-flow__handle.connectable {
